// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highlighted-element 1`] = `
<div
  className="schema-element highlighted undefined"
  onClick={[Function]}
  onDoubleClick={[Function]}
  role="button"
>
  Highlighted_element
</div>
`;

exports[`mapped-element 1`] = `
<div
  className="schema-element mapped undefined"
  onClick={[Function]}
  onDoubleClick={[Function]}
  role="button"
>
  Mapped_element
</div>
`;

exports[`single-element 1`] = `
<div
  className="schema-element undefined"
  onClick={[Function]}
  onDoubleClick={[Function]}
  role="button"
>
  Single_element
</div>
`;
